<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackgroundColor">

    <!-- TITLE -->

    <TextView
        android:id="@+id/titleTv"
        style="@style/AppText.ScreenTitle"
        android:layout_marginTop="@dimen/splash_top_margin"
        android:text="@string/add_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- AMOUNT -->

    <EditText
        android:id="@+id/amountEt"
        style="@style/AppInput"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:hint="@string/enter_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <!-- TYPE -->

    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/type"
        android:textSize="@dimen/text_size_body"
        app:layout_constraintStart_toStartOf="@id/amountEt"
        app:layout_constraintTop_toBottomOf="@id/amountEt" />

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/typeTitle"
        app:layout_constraintTop_toBottomOf="@id/typeTitle">

        <RadioButton
            android:id="@+id/incomeRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/expenseRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense" />
    </RadioGroup>

    <!-- CATEGORY -->
    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/category"
        android:textSize="@dimen/text_size_body"
        app:layout_constraintStart_toStartOf="@id/amountEt"
        app:layout_constraintTop_toBottomOf="@id/typeGroup" />

    <LinearLayout
        android:id="@+id/categoryContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/amountEt"
        app:layout_constraintStart_toStartOf="@id/amountEt"
        app:layout_constraintTop_toBottomOf="@id/categoryTitle">

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/card_corners" />

        <ImageView
            android:id="@+id/addCategoryIv"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_marginStart="@dimen/margin_small"
            android:background="@drawable/notification_shape"
            android:contentDescription="@string/new_category"
            android:padding="@dimen/padding_small"
            android:src="@drawable/add_icon"
            app:tint="#16C1A2" />
    </LinearLayout>

    <!-- DATE -->

    <EditText
        android:id="@+id/dateEt"
        style="@style/AppInput"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_large"
        android:clickable="true"
        android:drawableEnd="@drawable/calenda_add_icon"
        android:focusable="false"
        android:hint="@string/select_date"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="@id/amountEt"
        app:layout_constraintStart_toStartOf="@id/amountEt"
        app:layout_constraintTop_toBottomOf="@id/categoryContainer" />

    <!-- NOTE -->

    <EditText
        android:id="@+id/noteEt"
        style="@style/AppInput"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/note"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="@id/amountEt"
        app:layout_constraintStart_toStartOf="@id/amountEt"
        app:layout_constraintTop_toBottomOf="@id/dateEt" />

    <!-- SAVE BUTTON -->

    <Button
        android:id="@+id/saveBtn"
        style="@style/AppButton.Primary"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/save_transaction"
        app:layout_constraintEnd_toEndOf="@id/amountEt"
        app:layout_constraintStart_toStartOf="@id/amountEt"
        app:layout_constraintTop_toBottomOf="@id/noteEt" />

</androidx.constraintlayout.widget.ConstraintLayout>
