<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainScreens.Settings_fragment">

    <TextView
        android:id="@+id/settingsTitleTv"
        style="@style/AppText.ScreenTitle"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitleTv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <!-- General Settings Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/general"
                android:textColor="#757575"
                android:textSize="@dimen/text_size_caption"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                app:cardCornerRadius="@dimen/corner_radius_small"
                app:cardElevation="@dimen/card_elevation_low">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Currency Setting -->
                    <LinearLayout
                        android:id="@+id/currencySetting"
                        style="@style/SettingsItem">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/currency"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_body" />

                        <TextView
                            android:id="@+id/currentCurrencyTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="USD ($)"
                            android:textColor="#16C1A2"
                            android:textSize="@dimen/text_size_caption" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEEEE" />

                    <!-- Theme Setting -->
                    <LinearLayout
                        style="@style/SettingsItem"
                        android:clickable="false"
                        android:focusable="false">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dark_mode"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_body" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/themeSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:thumbTint="#16C1A2"
                            app:trackTint="#DDF5E0" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Data Management Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/data_management"
                android:textColor="#757575"
                android:textSize="@dimen/text_size_caption"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/corner_radius_small"
                app:cardElevation="@dimen/card_elevation_low">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Add Default Categories -->
                    <LinearLayout
                        android:id="@+id/addDefaultCategoriesBtn"
                        style="@style/SettingsItem">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add_default_categories"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_body" />

                        <ImageView
                            android:layout_width="@dimen/icon_size_small"
                            android:layout_height="@dimen/icon_size_small"
                            android:contentDescription="@string/add_default_categories"
                            android:src="@drawable/add_icon"
                            app:tint="#16C1A2" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEEEE" />

                    <!-- Reset All Data -->
                    <LinearLayout
                        android:id="@+id/resetDataBtn"
                        style="@style/SettingsItem">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reset_all_data"
                            android:textColor="#F44336"
                            android:textSize="@dimen/text_size_body" />

                        <ImageView
                            android:layout_width="@dimen/icon_size_small"
                            android:layout_height="@dimen/icon_size_small"
                            android:contentDescription="@string/reset_all_data"
                            android:src="@android:drawable/ic_menu_delete"
                            app:tint="#F44336" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:gravity="center"
                android:text="@string/app_version"
                android:textColor="#BDBDBD"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
