<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainScreens.Transaction_fragment">

    <TextView
        android:id="@+id/transactionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="@dimen/screen_top_margin"
        android:text="@string/transaction"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/notificationIv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="@id/notificationIv"
        app:layout_constraintStart_toStartOf="@id/backArrowIv"
        app:layout_constraintTop_toBottomOf="@id/transactionTv">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/notification_shape"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_transactions" />
    </LinearLayout>


    <ImageView
        android:id="@+id/notificationIv"
        android:layout_width="@dimen/icon_size_medium"
        android:layout_height="@dimen/icon_size_medium"
        android:layout_marginEnd="35dp"
        android:background="@drawable/notification_shape"
        android:contentDescription="@string/all"
        android:padding="4dp"
        android:src="@drawable/notification_icon"
        app:layout_constraintBottom_toBottomOf="@+id/transactionTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/transactionTv" />

    <ImageView
        android:id="@+id/backArrowIv"
        android:layout_width="20dp"
        android:layout_height="17dp"
        android:layout_marginStart="36dp"
        android:contentDescription="@string/all"
        android:src="@drawable/back_arrow_icon"
        app:layout_constraintBottom_toBottomOf="@+id/transactionTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/transactionTv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTotalMoney"
        android:layout_width="357dp"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/margin_large"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/corner_radius_large"
        app:layout_constraintEnd_toEndOf="@id/notificationIv"
        app:layout_constraintStart_toStartOf="@id/backArrowIv"
        app:layout_constraintTop_toBottomOf="@id/searchContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/balanceTotalTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/total_balance"
                android:textColor="#1F1F1F"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@+id/balanceMoneyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="$7,783.00"
                android:textColor="#1F1F1F"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/incomeExpenseContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/notificationIv"
        app:layout_constraintStart_toStartOf="@id/backArrowIv"
        app:layout_constraintTop_toBottomOf="@id/cardTotalMoney">

        <!-- Income Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardIncome"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/corner_radius_large"
            app:cardElevation="@dimen/card_elevation_low">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/income"
                    android:src="@drawable/balance_arrow"
                    app:tint="@color/green" />

                <TextView
                    android:id="@+id/incomeLabelTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="#1F1F1F"
                    android:textSize="@dimen/text_size_caption" />

                <TextView
                    android:id="@+id/incomeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$4,120.00"
                    android:textColor="#1F1F1F"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <!-- Expense Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardExpense"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/corner_radius_large"
            app:cardElevation="@dimen/card_elevation_low">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/expense"
                    android:src="@drawable/expense_arrow" />

                <TextView
                    android:id="@+id/expenseLabelTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textColor="#1F1F1F"
                    android:textSize="@dimen/text_size_caption" />

                <TextView
                    android:id="@+id/expenseTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1,187.40"
                    android:textColor="#2979FF"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/chipGroupFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/incomeExpenseContainer">

        <Button
            android:id="@+id/sortAssAndDesBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#DDF5E0"
            android:text="@string/sort_by_date"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/categoryBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="#DDF5E0"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/DateBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#DDF5E0"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="@dimen/card_elevation_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupFilter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="1dp"
            android:background="@drawable/card_corners"
            android:padding="@dimen/padding_large">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_small" />

            <LinearLayout
                android:id="@+id/emptyStateLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/no_transactions_yet"
                    android:src="@android:drawable/ic_menu_info_details"
                    app:tint="#BDBDBD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/no_transactions_yet"
                    android:textColor="#757575"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addTransactionFb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:contentDescription="@string/add_transaction"
                android:src="@drawable/add_icon"
                app:backgroundTint="#16C1A2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@android:color/white" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
